    orig-tarball-missing-upstream-signature" (we use the key to verify
    signature on upstrem's git tags).
  * Remove deprecated upstart configuration files: /etc/init/cryptdisks.conf
    and /etc/init/cryptdisks-udev.conf.  Cf. `lintian-info --tags
    package-installs-deprecated-upstart-configuration`.
  * debian/cryptsetup.{postinst,postrm}: Don't hard-code path to
    update-initramfs(1).

 -- Guilhem Moulin <guilhem@debian.org>  Mon, 03 Jul 2017 22:49:45 +0200

cryptsetup (2:1.7.3-4) unstable; urgency=high

  [ Guilhem Moulin ]
  * Drop obsolete update-rc.d parameters.  Thanks to Michael Biebl for the
    patch. (Closes: #847620)
  * debian/copyright: Fix license mismatch (docs/examples/*
    lib/crypto_backend/* lib/loopaes/* lib/tcrypt/* lib/verity/* python/* are
    LGPL-2.1+ not GPL-2+). (Closes: #861802)
  * debian/initramfs/cryptroot-hook: honor RESUME={none,auto} as documented in
    initramfs.conf(5) by initramfs-tools >=0.129. (Closes: #861074)

 -- Jonas Meurer <mejo@debian.org>  Tue, 09 May 2017 13:50:59 +0200

cryptsetup (2:1.7.3-3) unstable; urgency=medium

  [ Jonas Meurer ]
  * debian/scripts/decrypt_ssl: fix script to actually output the decrypted
    key. Apparently this script has been broken since June 2008. Doesn't seem
    like anybody is using it. Thanks to g1 for spotting and reporting the
    error. (Closes: #844050)
  * debian/initramfs/cryptroot-script:
    + limit the sleep after max passphrase attempts to devices for the rootfs.
      This mitigates the negative impact in case of broken keyscripts etc.
    + add $crypttarget to each message to provide more context.
  * debian/initramfs/cryptroot-hook: fix sanity check for key files on root
    fs in get_device_opts(): detect if processed device is a root (parent)
    device even for LVM setups. (closes: #842951)
  * debian/README.initramfs: minor fix to the decrypt_derived keyscript
    section: now that systemd is standard, 'cryptdisks_start' should be used